--- a/src/.dockerignore
+++ b/src/.dockerignore
@@ -18,9 +18,9 @@ build
 env/
 venv/
 
-# ChromaDB data (will be created fresh in container)
-# chroma_db/data/
-# *.sqlite3
+# ChromaDB data (will be created fresh in container or provided via volume mount)
+chroma_db/data/
+*.sqlite3
 
 # Documents and uploads
 uploads/
